Fix alignment.

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -21,6 +21,6 @@ a:hover,a:focus {
 
 .oneline {
   line-height: 20px;
-  vertical-align: bottom;
+  vertical-align: text-bottom;
 }
 
